# simple-term

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/scripts/: require-evolution-docs.sh
.github/workflows/: ci.yml  release.yml
apps/simple-term/: Cargo.toml
apps/simple-term/assets/: SimpleTerm.icns
apps/simple-term/src/: macos.rs  main.rs  terminal_view.rs
apps/simple-term/src/terminal_view/: utils.rs
apps/zed-terminal/: Cargo.toml
apps/zed-terminal/src/: main.rs  terminal_view.rs
crates/simple-term/: Cargo.toml
crates/zed-terminal/: Cargo.toml
crates/zed-terminal/src/: lib.rs  pty_info.rs  terminal.rs  terminal_hyperlinks.rs  terminal_settings.rs
crates/zed-terminal/src/mappings/: colors.rs  keys.rs  mouse.rs
crates/zed-terminal/src/platform/: mod.rs
docs/: architecture-invariants.md  release-strategy.md  troubleshooting.md
docs/evolution/: 0001-2026-02-24-release-foundation.md  0001-2026-02-24-repository-layout-and-boundaries.md  0002-2026-02-24-ci-baseline.md  0002-2026-02-24-runtime-model-and-invariants.md  0003-2026-02-24-feature-workflow-and-test-strategy.md  0003-2026-02-24-workspace-bootstrap.md  0004-2026-02-24-release-and-governance-model.md  0004-2026-02-24-release-policy-adjustments.md  0005-2026-02-24-known-pitfalls-and-recovery.md  0005-2026-02-24-v0.1.0-first-release.md  0006-2026-02-24-legacy-path-cleanup.md  0007-2026-02-24-macos-dmg-release-packaging.md  0008-2026-02-24-macos-menubar-quick-terminal-mode.md  0009-2026-02-24-terminal-tabs-and-tabbar-ui.md  0010-2026-02-24-terminal-pointer-coordinate-space.md  0011-2026-02-24-tab-bar-vertical-alignment-invariants.md  0012-2026-02-24-terminal-common-shortcut-routing.md  0013-2026-02-24-tabbar-settings-panel-and-runtime-appearance-controls.md  0014-2026-02-24-terminal-theme-presets-and-persistence.md  0015-2026-02-24-settings-drawer-v1-and-live-persistence.md  0016-2026-02-25-settings-drawer-scroll-and-menubar-command-reentrancy.md  0017-2026-02-25-settings-popup-overlay-window.md  0018-2026-02-25-macos-menubar-window-behavior-and-status-icon-parity.md  0019-2026-02-25-tab-title-width-stability-and-tooltip-overflow.md  0020-2026-02-25-microterm-palette-aligned-to-atom-one-dark-pro.md  0021-2026-02-25-microterm-black-background-and-white-red-channel.md  0022-2026-02-25-theme-rename-microterm-to-atom-one-dark.md  0023-2026-02-25-last-tab-close-hides-window-via-controller-path.md  0024-2026-02-25-selection-highlight-tint-and-contrast.md  0025-2026-02-25-unified-macos-app-shell-without-dock-mode.md  0026-2026-02-25-cursor-blink-suppression-during-input.md  0027-2026-02-25-responsive-settings-and-find-ui-hardening.md  0028-2026-02-25-tab-hover-close-action.md  0028-2026-02-25-window-deactivation-hide-deferral-for-app-borrow-safety.md  0029-2026-02-25-tab-accent-purple-token.md  0030-2026-02-25-tabbar-spacing-rhythm-refresh.md  0031-2026-02-25-settings-overlay-position-invariant-and-focus-dim.md  0032-2026-02-25-active-tab-indicator-bottom-clearance.md  0033-2026-02-25-macos-app-icon-pipeline-and-rounded-asset.md  0034-2026-02-26-multi-click-selection-modes.md  (+23 more)
docs/plans/: 2026-02-16-scroll-bounce-fix.md  2026-02-24-menubar-quick-terminal-design.md  2026-02-24-tabbar-settings-panel-design.md  2026-02-25-tabbar-spacing-rhythm-design.md  2026-02-25-unified-macos-app-shell-design.md  2026-02-26-local-pin-hotkey-and-tab-indicator-design.md  2026-02-26-local-pin-hotkey-and-tab-indicator.md  2026-02-26-ui-spacing-refresh-design.md  2026-02-26-ui-spacing-refresh.md
scripts/: package-macos-local.sh
(+10 files in other folders)
