[package]
name = "zed-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "zed_terminal"
path = "src/lib.rs"
doctest = false

[dependencies]
# GPUI
gpui.workspace = true

# Alacritty terminal
alacritty_terminal.workspace = true

# Common dependencies
anyhow.workspace = true
rustc-hash.workspace = true
futures.workspace = true
itertools.workspace = true
libc.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding.workspace = true
parking_lot.workspace = true
sysinfo.workspace = true
directories.workspace = true
smol.workspace = true
polling.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
